# redash-mcp-server

./: pyproject.toml
redash-mcp/: Dockerfile
redash-mcp/src/redash_mcp/: __init__.py
redash-mcp/src/redash_mcp/tools/: execute_query.py
src/redash_mcp/: main.py
src/redash_mcp/tools/: __init__.py
